--- a/fl_aggregator/dashboard/index.html
+++ b/fl_aggregator/dashboard/index.html
@@ -7,6 +7,13 @@
     <title>Training Results Dashboard</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <style>
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
@@ -87,12 +94,27 @@
             font-size: 0.9em;
             margin-top: 10px;
         }
+
+        .install-button {
+            display: inline-block;
+            margin: 0 10px 20px 10px;
+            padding: 10px 20px;
+            font-size: 1em;
+            color: white;
+            background-color: #4a90e2;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>Training Results Dashboard</h1>
+        <div class="header">
+            <h1>Training Results Dashboard</h1>
+            <button class="install-button" onclick="installFLClientApp()">Install FL Client App</button>
+        </div>
 
         <div class="section-title">Participants Information</div>
         <div class="table-container">
